--- a/man/meteodequeue.1
+++ b/man/meteodequeue.1
@@ -25,28 +25,28 @@ This helps to improve reliabilty by reducing contention on the
 table.
 .SH OPTIONS
 .TP
-.B \-d
+.B \-d,\-\-debug
 increase the debug level by one. Debug messages are written to standard
 error.
 .TP
-.BI \-l logurl
+.BI \-l,\-\-logurl logurl
 send log messages to the destination described by the
 .IR logurl . See
 .BR meteo (1)
 for a description of the possible formats for log URLs.
 .TP
-.BI \-f conffile
+.BI \-f,\-\-config= conffile
 Use 
 .I conffile
 to read the configuration, see 
 .BR meteo.xml (5)
 for the configuration syntax.
 .TP
-.B \-F
+.B \-F,\-\-foreground
 stay in foreground even when running in daemon mode. Useful during
 debugging.
 .TP
-.BI \-p pidfile
+.BI \-p,\-\-pidfile= pidfile
 When running in daemon mode, write the process id of the 
 .BR meteoavg (1)
 process to this file. Defaults to
