--- a/man/meteodbdump.1
+++ b/man/meteodbdump.1
@@ -69,7 +69,7 @@ arguments, in which case only the specified tables are dumped.
 
 .SH OPTIONS
 .TP
-.BI \-b basename
+.BI \-b,\-\-base= basename
 The
 .I basename
 string is prepended to the strings
@@ -95,7 +95,7 @@ and
 .IR /var/tmp/Lajeado-avg .
 
 .TP
-.BI \-c chunksize
+.BI \-c,\-\-chunksize= chunksize
 read at most records for a time interval of length
 .I chunksize 
 seconds from the database at one time. By default, a days worth of records
@@ -104,17 +104,17 @@ is read in every iteration, minimizing
 impact on concurrency. Larger values for the chunksize cause the dump to
 use more memory, and usually hurt concurrency noticably.
 .TP
-.B \-d
+.B \-d,\-\-debug
 increase the debug level by one. Debug messages are written to standard
 error.
 
 .TP
-.B \-r
+.B \-r,\-\-raw
 request raw format, i.e. tabulater separated fields, one line per row.
 This reduces the output size by about a factor 3.
 
 .TP
-.BI \-f conffile
+.BI \-f,\-\-config= conffile
 use
 .I conffile
 as the meteo configuration file. See 
@@ -122,14 +122,14 @@ as the meteo configuration file. See
 for the configuration file syntax.
 
 .TP
-.BI \-l logurl
+.BI \-l,\-\-logurl= logurl
 send log messages to the destination described by the
 .IR logurl . See
 .BR meteo (1)
 for a description of the possible formats for log URLs.
 
 .TP
-.BI \-s station
+.BI \-s,\-\-station= station
 name of the station to dump. This option can be given several times,
 .BR meteodbdump (1)
 will dump the data for each of the stations in turn. Data for all stations
