--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,5 @@
 Release 0.9.20:
+	* make rts packet attributes configurable
 	* we really should make the mapping for the RTS2 packet configurable,
 	  for the time being we just use hard wired names that should work
 	  with the vantage pro
