--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,6 @@
 Release 0.9.20:
+	* fix bug in address creation
+	* fix wind interpretation for rts2 packets
 	* add Altendorf2 station to configuration files
 	* add systemd configuration files
 	* add information about rts2name and rts2sensor attributes to
