--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Releaes 0.9.21:
+	* fix calibration for temperatures on vantage pro stations
+	* bump release to 0.9.21
+
 Release 0.9.20:
 	* adapt documentation to the new situation
 	* fix typos in service scripts
