fix two bugs reported by Tuncay Ozisik

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,6 @@
 Releaes 0.9.21:
+	* fix a bug caused by getValue() in the BasicRecorder not being
+	  declare virtual
 	* fix calibration for temperatures on vantage pro stations
 	* bump release to 0.9.21
 
