add powermeter stuff

--- a/man/meteo.xml.5
+++ b/man/meteo.xml.5
@@ -616,7 +616,9 @@ cos&see cos(3)
 tan&see tan(3)
 ceil&cut off data at maximum value
 floor&cut off data at minimum value
+timemult&multiply all values by the interval
 accumulate&compute sum of all values up to a point in time
+integrate&compute time integral of all values up to a point in time
 .TE
 
 The last two functions take an additional attribute limit. The ceil
