add stuff for the powermeter application

--- a/man/meteo.xml.5
+++ b/man/meteo.xml.5
@@ -594,10 +594,12 @@ constant&numeric constant
 value&refers to <select> statment or previous <data>
 function&compute monadic function
 function2&compute binary function
-sum&compute sum of all contained
+sum&compute sum of all contained data
 mult&compute product of all contained data
 diff&compute difference of two data sets
 quot&compute quotient of two data sets
+max&compute maximum of all contained data
+min&compute minimum of all contained data
 .TE
 
 The <constant> element creates a map that is defined everywhere and
@@ -614,6 +616,9 @@ sqrt&see sqrt(3)
 sin&see sin(3)
 cos&see cos(3)
 tan&see tan(3)
+asin&see asin(3)
+acos&see acos(3)
+atan&see atan(3)
 ceil&cut off data at maximum value
 floor&cut off data at minimum value
 timemult&multiply all values by the interval
